--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,25 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # State Management
+  get: ^4.6.6
+  
+  # HTTP Client
+  dio: ^5.4.0
+  
+  # Image Caching
+  cached_network_image: ^3.3.1
+  
+  # Storage
+  shared_preferences: ^2.2.2
+  
+  # Loading Indicator
+  flutter_easyloading: ^3.0.5
+  
+  # Utilities
+  intl: ^0.19.0
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
