--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   # State Management
   get: ^4.6.6
   
+  # Routing
+  go_router: ^14.6.2
+  
+  # Responsive UI
+  flutter_screenutil: ^5.9.3
+  
   # HTTP Client
   dio: ^5.4.0
   
@@ -53,10 +59,18 @@ dependencies:
   # Utilities
   intl: ^0.19.0
   url_launcher: ^6.2.4
+  flutter_launcher_icons: ^0.13.1
+  
+  # Environment Variables
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo/logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -77,9 +91,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/logo/
+    - assets/images/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
