added repo's files and make it downloadable

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,10 @@ dependencies:
   
   # Environment Variables
   flutter_dotenv: ^5.1.0
+  
+  # Syntax Highlighting
+  flutter_highlight: ^0.7.0
+  highlight: ^0.7.0
 
 dev_dependencies:
   flutter_test:
